Fix: device reference counting problem with patterns and clipping

Bug #690572 more details here. The problem was caused by installing a clip device while
drawing a pattern tile. This patch initialises the finalize member of the structure
where the clip device will be created to NULL. If a clip device is required, the member
will be initialised to a real routine. After drawing the pattern cell, if the finalize
routine is non-NULL we execute it.

This correctly dereferences the forwarded device if we create a clipping device.

Expected Differences
fts_01xx.xps, fts_30xx.xps, fts_32xx.xps and fts_46xx.xps should no longer create
truncated PDF files when using pdfwrite.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11297 a1074d23-0009-0410-80fe-cf8c14f379e6